# embed_it

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  coverage.yml  publish.yml
compilation_bench/: Cargo.toml  build.rs
compilation_bench/src/: lib.rs
coverage_report/: index.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/embed_it/src/: embedded_path.rs.html  metadata.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/: embed.rs.html  embedded_traits.rs.html  fs.rs.html  lib.rs.html  main_trait_data.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embed/: bool_like_enum.rs.html  pattern.rs.html  regex.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embed/attributes/: derive_default_traits.rs.html  dir.rs.html  embed.rs.html  entry.rs.html  field.rs.html  file.rs.html  global_field.rs.html  include.rs.html  path_match.rs.html  support_alt_separator.rs.html  with_extension.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embedded_traits/: compression.rs.html  content.rs.html  debug.rs.html  direct_child_count.rs.html  entries.rs.html  hashes.rs.html  index.rs.html  meta.rs.html  path.rs.html  recursive_child_count.rs.html  str_content.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embedded_traits/compression/: brotli.rs.html  gzip.rs.html  ids.rs.html  internal.rs.html  zstd.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embedded_traits/compression/internal/: brotli.rs.html  gzip.rs.html  zstd.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embedded_traits/hashes/: blake3.rs.html  digest.rs.html  ids.rs.html  internal.rs.html  md5.rs.html  sha1.rs.html  sha2.rs.html  sha3.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/embedded_traits/hashes/internal/: blake3.rs.html  digest.rs.html  md5.rs.html  sha1.rs.html  sha2.rs.html  sha3.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/marker_traits/: child_of.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/macros/src/utils/: anymap.rs.html  entry_ext.rs.html  unique_names.rs.html
coverage_report/coverage/home/runner/work/embed_it/embed_it/utils/src/: entry.rs.html
doc/: assets_structure.md  same_names_structure.md
embed_it/: Cargo.toml  README.md  build.rs
embed_it/src/: embedded_dir.rs  embedded_file.rs  embedded_path.rs  lib.rs  metadata.rs  traits.rs
embed_it/src/traits/: compression.rs  hashes.rs
embed_it/src/traits/hashes/: blake3.rs  md5.rs  sha1.rs  sha2.rs  sha3.rs
embed_it/tests/: child_of.rs  compression.rs  embedded_dir.rs  fields.rs  hashes.rs  include_exclude.rs  polygon.rs  same_names.rs  simple_assets.rs  support_alt_separator.rs  with_extensions.rs
examples/web/actix/: Cargo.toml
examples/web/actix/public/: large_txt_file.txt
examples/web/actix/src/: main.rs  templates.rs
examples/web/actix/templates/: dir.html
include_assets/: Cargo.toml
include_assets/src/: embedded_entry.rs  lib.rs
include_assets/tests/: embedded_dir.rs
macros/: Cargo.toml
macros/src/: embed.rs  embedded_dir.rs  embedded_traits.rs  fs.rs  lib.rs  main_trait_data.rs  marker_traits.rs  test_helpers.rs  utils.rs
macros/src/embed/: attributes.rs  bool_like_enum.rs  pattern.rs  regex.rs
macros/src/embed/attributes/: derive_default_traits.rs  dir.rs  embed.rs  entry.rs  field.rs  file.rs  global_field.rs  include.rs  path_match.rs  support_alt_separator.rs  with_extension.rs
macros/src/embedded_traits/: compression.rs  content.rs  debug.rs  direct_child_count.rs  enabled_trait.rs  entries.rs  feature_disabled.rs  hashes.rs  index.rs  main_trait.rs  meta.rs  path.rs  recursive_child_count.rs  str_content.rs
macros/src/embedded_traits/compression/: brotli.rs  gzip.rs  ids.rs  internal.rs  zstd.rs
macros/src/embedded_traits/compression/internal/: brotli.rs  gzip.rs  zstd.rs
macros/src/embedded_traits/hashes/: blake3.rs  digest.rs  ids.rs  internal.rs  md5.rs  sha1.rs  sha2.rs  sha3.rs
macros/src/embedded_traits/hashes/internal/: blake3.rs  digest.rs  md5.rs  sha1.rs  sha2.rs  sha3.rs
macros/src/marker_traits/: child_of.rs
macros/src/utils/: anymap.rs  entry_ext.rs  unique_names.rs
scripts/: compilation_bench.sh  cover.sh  download_coverage_shield.sh  prepare_env.sh  prepare_release.sh
utils/: Cargo.toml
utils/src/: entry.rs
