[workspace]
members = ["embed_it", "macros"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.80"
license = "MIT"
readme = "README.md"
version = "2.0.4"
authors = ["Pavel Kurdikov <riberk32@gmail.com>"]
repository = "https://github.com/riberk/embed_it"

[workspace.dependencies]
pretty_assertions = "1"
