[workspace]

[package]
name = "compilation_bench"
edition = "2024"
rust-version = "1.85"

[dependencies]
embed_it = { path = "../embed_it" }

[features]
bench-files = []
bench-dirs = []
bench-nested-dirs = []
bench-nesting = []
bench-lots-of-files = []
bench-lots-of-dirs = []
bench-lots-of-nesting-items = []
rust-analyzer = []
