[package]
name = "embed_it"

edition = {workspace = true}
rust-version = {workspace = true}
license = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
repository = {workspace = true}
description = {workspace = true}
keywords = {workspace = true}
categories = {workspace = true}
readme = "README.md"

[dependencies]
embed_it_macros = { version = "^3.0.0", path = "../macros" }

[dev-dependencies]
pretty_assertions = { workspace = true }
hex-literal = { version = "0.4" }

[features]
md5 = ["embed_it_macros/md5"]
sha1 = ["embed_it_macros/sha1"]
sha2 = ["embed_it_macros/sha2"]
sha3 = ["embed_it_macros/sha3"]
blake3 = ["embed_it_macros/blake3"]