[package]
name = "embed_it_macros"
edition = {workspace = true}
rust-version = {workspace = true}
license = {workspace = true}
readme = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
repository = {workspace = true}
description = """
The macros for [`embed_it`]
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
darling = "0.20"
convert_case = "0.7.1"
unicode-ident = "1"
regex = { version = "1.5.5" }
glob = { version = "0.3"}

[dev-dependencies]
pretty_assertions = { workspace = true }
prettyplease = {version = "0.2", features = ["verbatim"]}


