[package]
name = "embed_it_macros"
edition = {workspace = true}
rust-version = {workspace = true}
license = {workspace = true}
readme = {workspace = true}
version = {workspace = true}
authors = {workspace = true}
repository = {workspace = true}
description = """
The macros for [`embed_it`]
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"
darling = "0.20"
convert_case = "0.7.1"
unicode-ident = "1"
regex = { version = "1.5.5" }
glob = { version = "0.3"}
derive_more = { version = "1.0.0", default-features = false, features = ["display", "error", "from"]}

digest = { version = "0.10", optional = true }
md-5 = { version = "0.10", optional = true }
sha1 = { version = "0.10", optional = true }
sha2 = { version = "0.10", optional = true }
sha3 = { version = "0.10", optional = true }
blake3 = { version = "1", optional = true }


[dev-dependencies]
pretty_assertions = { workspace = true }
prettyplease = {version = "0.2", features = ["verbatim"]}
hex-literal = { version = "0.4" }

[build-dependencies]
convert_case = "0.7.1"


[features]
digest = ["dep:digest"]
md5 = ["dep:md-5", "digest"]
sha1 = ["dep:sha1", "digest"]
sha2 = ["dep:sha2", "digest"]
sha3 = ["dep:sha3", "digest"]
blake3 = ["dep:blake3"]