[package]
name = "embed_it_macros"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = """
The macros for [`embed_it`]
"""

[lib]
proc-macro = true

[dependencies]
embed_it_utils = { version = "^3.0.0", path = "../utils" }

proc-macro2 = "1"
quote = "1"
syn = "2"
darling = "0.21"
convert_case = "0.9.0"
unicode-ident = "1"
regex = { version = "1.5.5" }
glob = { version = "0.3" }
derive_more = { version = "2.0.1", default-features = false, features = [
    "display",
    "error",
    "from",
] }

digest = { version = "0.10", optional = true, default-features = false, features = [
    "oid",
    "std",
] }
md-5 = { version = "0.10", optional = true, default-features = false, features = [
    "oid",
    "std",
] }
sha1 = { version = "0.10", optional = true, default-features = false, features = [
    "oid",
    "std",
] }
sha2 = { version = "0.10", optional = true, default-features = false, features = [
    "oid",
    "std",
] }
sha3 = { version = "0.10", optional = true, default-features = false, features = [
    "oid",
    "std",
] }
blake3 = { version = "1", optional = true, default-features = false, features = [
    "std",
] }

brotli = { version = "8.0.0", optional = true, default-features = false, features = [
    "std",
] }
flate2 = { version = "1.0.35", optional = true, default-features = false, features = [
    "rust_backend",
] }
zstd = { version = "0.13", optional = true, default-features = false, features = [
] }

[dev-dependencies]
pretty_assertions = { workspace = true }
prettyplease = { version = "0.2", features = ["verbatim"] }
hex-literal = { version = "1.0.0" }


[features]

any-hash = []
digest = ["dep:digest"]
md5 = ["dep:md-5", "digest", "any-hash"]
sha1 = ["dep:sha1", "digest", "any-hash"]
sha2 = ["dep:sha2", "digest", "any-hash"]
sha3 = ["dep:sha3", "digest", "any-hash"]
blake3 = ["dep:blake3", "any-hash"]

any-compression = []
brotli = ["any-compression", "dep:brotli"]
zstd = ["any-compression", "dep:zstd"]
gzip = ["any-compression", "dep:flate2"]
