[package]
name = "embed_it_utils"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = """
The utils for [`embed_it`]
"""

[dependencies]
